--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Red Hat Text', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Red Hat Text', 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
 
 .header-wrapper {
@@ -8,6 +8,19 @@ body {
     flex-flow: column nowrap;
     width: 100%;
     min-height: 400px;
+}
+
+.header-wrapper::before {
+    content: '';
+    position: absolute;
+    min-height: 765px;
+    min-width: 100%;
+    z-index: -1; 
+    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 15%, rgba(255, 255, 255, 0.5) 85%, rgba(255, 255, 255, 0) 100%), url("../images/big-slider-bg-1.jpg");
+    background-position: center center;
+    background-size: cover;
+    filter: saturate(90%) contrast(100%);
+    bottom: 24px;
 }
 
 .nav-wrapper {
@@ -23,6 +36,7 @@ body {
 
 .nav {
     display: flex;
+    position: relative;
     flex-flow: row nowrap;
     justify-content: space-between;
     height: 90px;
@@ -30,6 +44,7 @@ body {
     min-width: 1440px;
     box-sizing: border-box;
     padding: 0px 120px 0px 120px;
+    
 }
 
 .logo-block {
@@ -121,11 +136,11 @@ body {
     max-width: 1440px;
     min-height: 765px;
     background-image: url("../images/big-slider-bg-1.jpg");
-    background-position: center top;
+    background-position: center center;
     background-repeat: no-repeat;
-    background-color: #656565;
     background-size: cover;
-
+    box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.10), 10px -10px 10px rgba(0, 0, 0, 0.10);
+    
 }
 
 .main {
@@ -274,3 +289,6 @@ section > h2 {
     left: 16px;
 }
 
+.bullets {
+
+}
