--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body {
     height: 90px;
     background-color: rgba(242, 120, 92, 0.7);
     box-shadow: 0px 4px 4px rgba(13, 96, 111, 0.5);
+    z-index: 10;
 }
 
 .nav {
@@ -63,7 +64,9 @@ body {
 
 .menu-block {
     display: flex;
+    position: relative;
     align-items: center;
+    left: -16px;
     min-width: 50px;
 }
 
@@ -74,11 +77,11 @@ body {
     list-style: none;
 }
 
-.menu-list>li {
+.menu-list > li {
     display: inline-block;
 }
 
-.menu-list>li>a {
+.menu-list > li > a {
     color: #fff;
     text-decoration: none;
     font-family: 'Red Hat Text';
@@ -131,6 +134,7 @@ body {
 
 .header-container {
     display: flex;
+    position: relative;
     width: 100%;
     min-width: 1440px;
     max-width: 1440px;
@@ -139,8 +143,14 @@ body {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.10), 10px -10px 10px rgba(0, 0, 0, 0.10);
-    
+    box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.10), 10px -10px 10px rgba(0, 0, 0, 0.10);    
+}
+
+.header-block {
+    display: flex;
+    flex-flow: column nowrap;
+    top: 200px;
+    background-color: rgba(153, 50, 204, 0.258);
 }
 
 .main {
@@ -348,9 +358,81 @@ section > h2 {
     display: flex;
     flex-flow: column nowrap;
     margin-top: 7px;
-    background-color: rgba(1, 181, 181, 0.211);
 }
 
 .stories-wrapper {
-    
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    width: 1440px;
+    min-height: 300px;
+    background-image: url("../images/bg-stories.jpg");
+    background-repeat: no-repeat;
+    background-position: center top;
+}
+
+.stories-container {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    width: 1440px;    
+    padding-top: 25px;
+    min-height: 300px;
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+.story {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 40px;
+    height: 250px;
+    width: 1200px;
+    margin: 15px 0px;
+}
+
+.story-photo {
+    display: flex;
+    width: 400px;
+    height: 250px;
+    filter: drop-shadow(0px 4px 4px #0D606F);
+}
+
+.story-photo img {
+    border-radius: 16px;
+}
+
+.story-content {
+    display: flex;
+    flex-flow: column nowrap;
+    width: 100%;
+    height: 100%;
+}
+
+.story-name {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 42px;
+    color: #0D606F;
+    margin-top: 1px;
+    margin-bottom: 23px;
+}
+
+.story-description p {
+    margin: 0px 0px;
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color: #0D606F;
+}
+
+.story-description p a {
+    font-weight: 700;
+    text-decoration-line: underline;
+    color: #0D606F;
 }
