upd: styles, imgages and layout

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
-* {scroll-behavior: smooth;}
+* {
+    scroll-behavior: smooth;
+    transition: all 1.5s ease;
+}
 *:hover {transition: 0.5s;}
-*:focus {transition: 0s;}
+*:focus {transition: 0.5s;}
 *::selection {
     color: #FFFFFF;
     background: #0D606F;
@@ -169,7 +172,7 @@ button:active {
     box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.10), 10px -10px 10px rgba(0, 0, 0, 0.10);    
 }
 
-.header-block {
+.preview {
     display: flex;
     flex-flow: column nowrap;
     align-items: flex-start;
@@ -270,7 +273,7 @@ section {
     align-items: center;
 }
 
-.section-steps {
+.steps {
     display: flex;
     flex-flow: column nowrap;
     max-width: 100%;
@@ -328,7 +331,7 @@ section > h2 {
 }
 
 .step-icon:hover {
-    bottom: 3px;
+    transform: translateY(-6px);
     background: #0D606F;
 }
 
@@ -341,8 +344,8 @@ section > h2 {
     color: #0D606F;
 }
 
-.section-popular {
-    /* background-color: #8b22842b; */
+.destinations {
+    
 }
 
 .slider-wrapper {
@@ -475,7 +478,7 @@ section > h2 {
     line-height: 40px;    
 }
 
-.section-stories {
+.stories {
     display: flex;
     flex-flow: column nowrap;
     margin-top: 7px;
@@ -571,14 +574,6 @@ section > h2 {
     height: 61px;
 }
 
-.github {
-    display: flex;
-    flex-flow: row nowrap;
-    height: 50px;
-    width: 300px;
-    background-color: rgba(137, 43, 226, 0.329);
-}
-
 .copyright {
     font-family: 'Red Hat Text';
     font-style: normal;
@@ -588,16 +583,24 @@ section > h2 {
     color: #FFFFFF;
 }
 
-.socials {
+.socials, .links {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    box-sizing: border-box;
-    padding: 0px 120px 0px 39px;
+    gap: 20px;
+    box-sizing: border-box;    
+    margin: 0;
     width: 300px;
 }
 
-.socials a {
+.socials {padding: 0px 120px 0px 39px;}
+.links {padding: 0px 20px 0px 120px;}
+
+.socials li, .links {
+    height: 34px;
+    list-style: none;
+}
+.socials a, .links a {
     height: 34px;
 }
