--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,12 @@ button:active {
     z-index: 10;
 }
 
+@media (max-width: 768px) {
+    .nav-wrapper {
+        display: none;
+    }
+}
+
 .nav {
     display: flex;
     position: relative;
@@ -92,7 +98,40 @@ button:active {
     min-width: 1440px;
     box-sizing: border-box;
     padding: 0px 120px 0px 120px;
+}
 
+@media (max-width: 1456px) {
+    .nav {
+        max-width: 100%;
+        min-width: 100%;
+    }
+}
+
+@media (max-width: 1140px) {
+    .nav {
+        padding-left: 30px;
+        padding-right: 30px;;
+    }
+}
+
+@media (max-width: 992px) {
+    .nav {
+
+    }
+}
+
+@media (max-width: 768px) {
+    .nav {
+        display: none;
+    }
+}
+
+@media (max-width: 576px) {
+    
+}
+
+@media (max-width: 390px) {
+    
 }
 
 .logo-block {
@@ -109,6 +148,31 @@ button:active {
     height: 90px;
 }
 
+.logo-name {
+    display: block;
+}
+
+@media (max-width: 992px) {
+    .logo-name {
+        display: none;
+    }
+}
+
+.logo-square {
+    display: flex;
+    position: relative;
+    width: auto;
+    height: auto;
+}
+
+@media (max-width: 992px) {
+    .logo-square {
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
+    }
+}
+
 .menu-block {
     display: flex;
     position: relative;
@@ -117,11 +181,23 @@ button:active {
     min-width: 50px;
 }
 
+@media (max-width: 992px) {
+    .menu-block {
+        left: 0px;
+    }
+}
+
 .menu-list {
     display: flex;
     gap: 42px;
     padding: 0px;
     list-style: none;
+}
+
+@media (max-width: 992px) {
+    .menu-list {
+        gap: 24px;
+    }
 }
 
 .menu-list>li {
@@ -161,6 +237,37 @@ button:active {
     color: #0D606F;
 }
 
+.nav-mobile-wrapper {
+    display: none;
+    position: absolute;
+    width: 100%;
+    margin-top: 43px;
+    z-index: 1;
+}
+
+@media (max-width: 768px) {
+    .nav-mobile-wrapper {
+        display: flex;
+    }
+}
+
+.nav-mobile {
+    display: flex;
+    flex-flow: row nowrap;
+    box-sizing: border-box;
+    width: 100%;
+    height: 48px;
+    margin-left: 16px;
+    margin-right: 16px;
+    background-color: rgba(139, 0, 139, 0.257);
+}
+
+@media (max-width: 576px) {
+    .nav-mobile {
+        height: 32px;
+    }
+}
+
 .header {
     display: flex;
     flex-flow: column nowrap;
@@ -197,6 +304,7 @@ button:active {
 
 @media (max-width: 768px) {
     .header-container {
+        background-image: linear-gradient(180deg, #0D606F 0%, rgba(13, 96, 111, 0) 25.1%), url("../images/big-slider-bg-1-sm.jpg");
         min-height: 425px;
     }
 }
@@ -209,7 +317,7 @@ button:active {
 
 @media (max-width: 390px) {
     .header-container {
-        background-image: url("../images/big-slider-bg-1-sm.jpg");
+        background-image: linear-gradient(180deg, #0D606F 0%, rgba(13, 96, 111, 0) 25.1%), url("../images/big-slider-bg-1-sm.jpg");
     }
 }
 
@@ -266,8 +374,8 @@ button:active {
 
 @media (max-width: 1140px) {
     .header-title {
-        font-size: 48px;
-        line-height: 64px;
+        font-size: 72px;
+        line-height: 80px;
     }
 }
 
