--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,15 @@ button:active {
     }
 }
 
+.menu-burger {
+    display: flex;
+    position: absolute;
+    width: 165px;
+    height: 250px;
+    top: -200px;
+    background-color: rgba(242, 120, 92, 1);
+}
+
 .header {
     display: flex;
     flex-flow: column nowrap;
