--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,15 @@ button:active {
     }
 }
 
+.menu-burger-bg {
+    display: none;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: #0d606fae;
+    z-index: 1;
+}
+
 .menu-burger {
     display: flex;
     position: absolute;
